@@ -3,6 +3,7 @@ This file documents the revision history for Perl extension Nagios::Web.
 0.10_4  Fri Dec  4 09:50:46 CET 2009
           - completed status overview page
           - completed extinfo pages 5 and 8
+          - completed outages page
 
 0.10_3  Sat Nov 28 12:12:11 CET 2009
           - completed status hostdetail page
